--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,12 @@ body {
   font-size: 32px;
   color: #5563de;
 }
+.scores-note {
+  font-size: 16px;
+  margin-top: -10px;
+  margin-bottom: 10px;
+  color: #333;
+}
 .panel p {
   margin-bottom: 20px;
   font-size: 18px;
